update grading service API to return all submissions made by a particular student, and add support for getLatestSubmission endpoint
