# backend/grading-service/src/controllers/grading-controller.ts
@@ -14,7 +14,7 @@ import { PostFeedbackValidator } from "../libs/validators/post-feedback-validato
 import NotExistingStudentError from "../libs/errors/NotExistingStudentError";
 import { GetSubmissionQueryValidator } from "../libs/validators/get-submission-query-validator";
 
-const getSubmissionByQuestionIdAndStudentId = async (
+const getSubmissionsByQuestionIdAndStudentId = async (
   request: Request,
   response: Response
 ) => {
@@ -22,15 +22,58 @@ const getSubmissionByQuestionIdAndStudentId = async (
     const { questionId } = request.params;
     const { studentId } = GetSubmissionQueryValidator.parse(request.query);
 
-    const submission = await GetHandler.getSubmissionByQuestionIdAndStudentId(
+    const submissions = await GetHandler.getSubmissionsByQuestionIdAndStudentId(
       questionId,
       studentId
     );
 
+    response.status(HttpStatusCode.OK).json(submissions);
+  } catch (error) {
+    if (error instanceof ZodError) {
+      response.status(HttpStatusCode.BAD_REQUEST).json({
+        error: "BAD REQUEST",
+        message: formatZodErrorMessage(error),
+      });
+
+      return;
+    }
+
+    if (error instanceof NotExistingStudentError) {
+      response.status(HttpStatusCode.NOT_FOUND).json({
+        error: "NOT FOUND",
+        message: "Invalid student_id. " + error.message,
+      });
+
+      return;
+    }
+
+    console.log(error);
+
+    response.status(HttpStatusCode.INTERNAL_SERVER_ERROR).json({
+      error: "INTERNAL SERVER ERROR",
+      message: "An unexpected error has occurred. Please try again later",
+    });
+  }
+};
+
+const getLatestSubmissionByQuestionIdAndStudentId = async (
+  request: Request,
+  response: Response
+) => {
+  try {
+    const { questionId } = request.params;
+    const { studentId } = GetSubmissionQueryValidator.parse(request.query);
+
+    const submission =
+      await GetHandler.getLatestSubmissionByQuestionIdAndStudentId(
+        questionId,
+        studentId
+      );
+
     if (!submission) {
       response.status(HttpStatusCode.NOT_FOUND).json({
         error: "NOT FOUND",
-        message: "No submission found",
+        message: "Submission not found",
       });
 
       return;
@@ -42,6 +85,15 @@ const getSubmissionByQuestionIdAndStudentId = async (
       response.status(HttpStatusCode.BAD_REQUEST).json({
         error: "BAD REQUEST",
         message: formatZodErrorMessage(error),
+      });
+
+      return;
+    }
+
+    if (error instanceof NotExistingStudentError) {
+      response.status(HttpStatusCode.NOT_FOUND).json({
+        error: "NOT FOUND",
+        message: "Invalid student_id. " + error.message,
       });
 
       return;
@@ -169,7 +221,8 @@ const postFeedback = async (request: Request, response: Response) => {
 };
 
 export const GradingController = {
-  getSubmissionByQuestionIdAndStudentId,
+  getSubmissionsByQuestionIdAndStudentId,
+  getLatestSubmissionByQuestionIdAndStudentId,
   postParser,
   postFeedback,
 };
