# backend/grading-service/src/routes/route.ts
@@ -13,7 +13,12 @@ router.post("/feedback/generate", GradingController.postFeedback);
 
 router.get(
   "/questions/:questionId/submissions",
-  GradingController.getSubmissionByQuestionIdAndStudentId
+  GradingController.getSubmissionsByQuestionIdAndStudentId
+);
+
+router.get(
+  "/questions/:questionId/submission/latest",
+  GradingController.getLatestSubmissionByQuestionIdAndStudentId
 );
 
 router.use(docsRouter);
